_includes/css/main.css
/* ... */
/* ----- NAV/NAV-BAR -----*/

nav {
    background: rgba(25, 25, 25, 0.5);
    transition: background-color .5s, transform 200ms;
}

nav.navbar-shrink {
    background: rgba(25,25,25,0.9);
}

nav a {
    color: rgba(255,255,255,0.8);
    text-shadow: 0 2px 0 rgba(0,0,0,0.25);
}

nav a:hover {
    color: rgba(255,255,255,1);
}

.nav>li>a:focus, .nav>li>a:hover {
    background-color: rgba(0,0,0,0);
}

@media(min-width:768px) {
    .navbar-fixed-top {
        padding: 15px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-fixed-top .navbar-brand {
        font-size: 3rem;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-fixed-top.navbar-shrink {
        padding: 10px 0;
    }

    .navbar-fixed-top.navbar-shrink .navbar-brand {
        font-size: 2.5rem;
    }
}

.navbar {
    text-transform: uppercase;
    font-family: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.navbar-header {
    position: relative;
}

.navbar.navbar-shrink a img {
    top: 6px;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-header a {
    position: relative;
    left: 0;
    padding-left: 42px;
    transition: all 0.5s;
}

.navbar-header a img {
    position: absolute;
    left: 0;
    top: 8px;
    transition: all 0.5s;
}

.navbar-default,
.navbar-inverse {
    border: 0;
}

/* ----- SECTIONS -----*/

section {
    padding: 75px 0;
}

section h2 {
    margin: 0;
    font-size: 3rem;
    font-weight: 800;
}

.section-overview {
    text-align: left;
    padding: 20px 0;
    font-size: 2rem;
    font-weight: 100;
}

.section-overview p {
    margin: 0;
}

@media(max-width:767px) {
    section {
        padding: 75px 0;
    }

    section.first {
        padding-top: 75px;
    }
}

/* ----- BUTTONS -----*/

.btn {
    border-radius: 2px;
}

.btn-outline {
    margin-top: 15px;
    border: solid 1px rgba(255, 255, 255, 0.25);
    font-size: 2rem;
    color: #fff;
    background: 0 0;
    text-shadow: 0 2px 0 rgba(0,0,0,0.33);
    transition: all .3s ease-in-out;
    text-transform: uppercase;
    font-weight: 600
}

header .btn-outline:hover, #contact .btn-outline:hover {
    background: rgba(0, 130, 255, 0.66);
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border-color: rgba(255, 255, 255, 0);
    color: #fff;
    background: rgba(255, 255, 255, 0.15);
}

/* ----- ALERTS -----*/

.alert {
    border-radius: 2px;
}

.alert-danger {
    background-color: rgba(255, 0, 51, 0.65);
    border: none;
}

.alert-success {
    background-color: rgba(0, 130, 255, 0.65);
    border: none;
}

/**
 * -----------------------------------------------------------------------------
 * SECTION-SPECFIC SYLES
 * -----------------------------------------------------------------------------
 */

/* ----- HEADER ----- */

header {
    text-align: center;
    color: #fff;
    background-image: url('/img/hero-bg.jpg');
    background-size: cover;
    background-position-y: 50%;
    position: relative;
    text-shadow: 0 2px 0 rgba(0,0,0,0.5);
    min-height: 100%;
}

header h1 {
    font-size: 5rem;
}

header h1 strong {
    color: rgb(255, 184, 0);
}

header p.lead {
    margin: 20px 15% 30px;
}

@media(max-width:768px) {
    .container {
        padding: 35px 0;
    }

    header {
        min-height: 0;
    }

    header img {
        width: 100px;
    }

    header h1 {
        font-size: 4rem;
    }

    header p.lead {
        font-size: 2.25rem;
        margin: 20px 5% 30px;
    }
}

.grid-bg {
    width: 100%;
    height: 100%;
    position: absolute;
    background-image: url('/img/grid.png');
    background-repeat: no-repeat;
    background-position: 50% 0;
}

#hero-logo {
    position: relative;
    top: -50px;
    opacity: 0;
    transition: all 1.5s;
}

.loaded #hero-logo {
    top: 0px;
    opacity: 1;
}

#hero-content {
    position: relative;
    top: 25px;
    opacity: 0;
    transition: all 1.5s;
}

.loaded #hero-content {
    top: 0px;
    opacity: 1;
}

/* ----- SERVICES ----- */

#who-we-are {
    background: url(http://subtlepatterns.com/patterns/brillant.png);
}

#who-we-are img {
    width: 100%;
    max-width: 256px;
    margin: 0 auto;
}

#who-we-are hr {
    visibility: hidden;
}

#who-we-are ul {
    list-style-type: none;
}

#who-we-are li {
    display: inline-block;
    position: relative;
    z-index: 2;
}

#who-we-are li img {
    width: 128px;
}

#who-we-are li:first-child {
    position: relative;
    left: 35px;
}

#who-we-are li:last-child {
    position: relative;
    right: 35px;
}

#who-we-are li:first-child, #who-we-are li:last-child {
    z-index: 1;
}

.service, .service h3 {
    text-align: center;
    margin-top: 2rem;
}

.service h3 {
    font-weight: 500;
    margin: 0 auto;
    padding: 2rem 0;
    border-bottom: 1px solid rgba(0,0,0,0.15);
}

.service {
    padding: 0;
}

.service p {
    font-size: 1.5rem;
    margin: 0;
    padding: 1.5rem 3rem;
}

.service img {
    max-width: 172px;
    width: 100%;
}

/* ----- CONTACT ----- */

#contact {
    padding: 0;
    /*background: url(http://31.media.tumblr.com/560a35b8fb40b1c069fa18ef9f2ea179/tumblr_n4cm73ozlb1st5lhmo1_1280.jpg);*/
    background: url(img/contact-bg.jpg);
    background-color: #333;
    background-size: cover;
    background-position: 50%;
    position: relative;
    min-height: 100%;
}

.floating-label-form-group {
    position: relative;
    margin-bottom: 0;
    padding: 0 0 1rem 0;
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}
/* ... */

